# wareki-rs

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  gh-pages.yml
bindings/c/: Cargo.toml
bindings/c/src/: lib.rs
bindings/go/: go.mod  wareki.go  wareki_test.go
bindings/node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test_wareki.js
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml  test_wareki.py
bindings/python/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  go.md  node.md  python.md  rust.md
